// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /campaigns Campaigns_200 1`] = `
Object {
  "category": null,
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 1,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`GET /campaigns/:id Campaigns_200 1`] = `
Object {
  "category": null,
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "maxProposition": 2,
  "name": "test",
  "propositions": Array [],
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`GET /campaigns/:id/internshipTypes Campaigns_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 3,
  "label": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /campaigns ValidCampaigns_200 1`] = `
Object {
  "categoryId": 1,
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": null,
  "updatedAt": Any<String>,
}
`;

exports[`POST /campaigns/:id/internshipTypes/:internship_type_id/link Campaigns_200_WithInternshipType 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 4,
  "label": "test",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /campaigns/:id Campaigns_200_CategoryUpdated 1`] = `
Object {
  "categoryId": 2,
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`PUT /campaigns/:id Campaigns_200_NotAnyDataUpdated 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`PUT /campaigns/:id Campaigns_200_UndefinedCategoryUpdate 1`] = `
Object {
  "categoryId": 1,
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`PUT /campaigns/:id Campaigns_200_UpdateAllData 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "maxProposition": 2,
  "name": "additional data",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;
